--- a/notebooks/freshstack-eda.ipynb
+++ b/notebooks/freshstack-eda.ipynb
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -353,6 +353,7 @@
       "Total number of relevant corpus ids across all queries: 3617\n",
       "Average relevant corpus ids per query: 17.82\n",
       "Average relevant corpus ids per nugget: 5.66\n",
+      "Average nuggets per query: 3.15\n",
       "\n",
       "Distribution of nuggets per query:\n",
       "1 nuggets: 2 queries (0.99%)\n",
@@ -444,6 +445,13 @@
     "plt.grid(alpha=0.3)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
