run freshstack-langchain test

--- a/notebooks/data-creation/enronqa-subset-creation.ipynb
+++ b/notebooks/data-creation/enronqa-subset-creation.ipynb
@@ -106,12 +106,12 @@
     "os.makedirs(\"data\", exist_ok=True)\n",
     "\n",
     "# Save emails to a separate JSON file\n",
-    "emails_output_file = \"data/enron_emails.json\"\n",
+    "emails_output_file = \"enron_emails.json\"\n",
     "with open(emails_output_file, \"w\") as f:\n",
     "    json.dump(email_list, f, indent=2)\n",
     "\n",
     "# Save questions to a separate JSON file\n",
-    "questions_output_file = \"data/enron_questions.json\"\n",
+    "questions_output_file = \"enron_questions.json\"\n",
     "with open(questions_output_file, \"w\") as f:\n",
     "    json.dump(questions_list, f, indent=2)\n",
     "\n",
@@ -127,7 +127,7 @@
     "            \"question_id\": id(question)  # Using object id as a unique identifier\n",
     "        })\n",
     "\n",
-    "reference_output_file = \"data/enron_qa_reference.json\"\n",
+    "reference_output_file = \"enron_qa_reference.json\"\n",
     "with open(reference_output_file, \"w\") as f:\n",
     "    json.dump(reference_data, f, indent=2)\n",
     "\n",
