--- a/notebooks/nuggets/what-is-hnsw.ipynb
+++ b/notebooks/nuggets/what-is-hnsw.ipynb
@@ -69,7 +69,7 @@
     "add_query_relevance = Operations.append_property(\n",
     "    property_name=\"relevance_assessment\",\n",
     "    data_type=DataType.BOOL,\n",
-    "    view_properties=[\"content\", \"metadata\"],\n",
+    "    view_properties=[\"content\"],\n",
     "    instruction=f\"\"\"Assess if this document is relevant to the query: {query}.\n",
     "    Return True if the document is relevant to the query, False otherwise.\"\"\",\n",
     ")\n",
