--- a/notebooks/eda/freshstack-eda.ipynb
+++ b/notebooks/eda/freshstack-eda.ipynb
@@ -255,7 +255,7 @@
     "plt.show()\n",
     "\n",
     "# Print summary statistics\n",
-    "print(f\"Token count statistics:\")\n",
+    "print(\"Token count statistics:\")\n",
     "print(f\"Mean: {mean_tokens:.2f}\")\n",
     "print(f\"Median: {median_tokens:.2f}\")\n",
     "print(f\"Min: {min(token_counts)}\")\n",
