fixes & run tests

--- a/notebooks/eda/lotte-eda.ipynb
+++ b/notebooks/eda/lotte-eda.ipynb
@@ -20,27 +20,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "f325cb90",
    "metadata": {},
    "outputs": [],
    "source": [
-    "lotte_dataset = ir_datasets.load(\"lotte/lifestyle/test\")"
+    "lotte_dataset = ir_datasets.load(\"lotte/lifestyle/test/forum\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "0de25777",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[INFO] If you have a local copy of https://downloads.cs.stanford.edu/nlp/data/colbert/colbertv2/lotte.tar.gz, you can symlink it here to avoid downloading it again: /Users/cshorten/.ir_datasets/downloads/3b2e88b1d66933627462950b4c3f5d0f\n",
-      "[INFO] [starting] https://downloads.cs.stanford.edu/nlp/data/colbert/colbertv2/lotte.tar.gz\n",
-      "https://downloads.cs.stanford.edu/nlp/data/colbert/colbertv2/lotte.tar.gz: 61.4%| 2.20G/3.58G [06:53<04:19, 5.31MB/s]"
+      "GenericDoc(doc_id='0', text='Normal double-acting baking powder makes CO2 (thus giving a rising effect) in two ways: when it gets wet, and when it is heated. Baking soda only makes CO2 when it gets wet. From Wikipedia: The acid in a baking powder can be either fast-acting or slow-acting.[6] A fast-acting acid reacts in a wet mixture with baking soda at room temperature, and a slow-acting acid will not react until heated in an oven. Baking powders that contain both fast- and slow-acting acids are double acting; those that contain only one acid are single acting. By providing a second rise in the oven, double-acting baking powders increase the reliability of baked goods by rendering the time elapsed between mixing and baking less critical, and this is the type most widely available to consumers today.')\n"
      ]
     }
    ],
@@ -52,8 +50,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "47ed6398",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TrecQrel(query_id='0', doc_id='50103', relevance=1, iteration='0')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for qrel in lotte_dataset.qrels_iter():\n",
+    "    print(qrel)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f86f4728",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GenericQuery(query_id='0', text='OK were all adults here, so really, how on earth should I use a squat toilet?')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for query in lotte_dataset.queries_iter():\n",
+    "    print(query)\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6d98c89",
    "metadata": {},
    "outputs": [],
    "source": []
