setup bright/biology

--- a/notebooks/eda/bright-eda.ipynb
+++ b/notebooks/eda/bright-eda.ipynb
@@ -148,6 +148,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 'neanderthals_vitamin_C_diet/Neanderthal_0_43.txt',\n",
+       " 'content': ' pelvises; and proportionally shorter forearms and forelegs.\\nBased on 45 Neanderthal long bones from 14 men and 7 women, the average height was 164 to 168\\xa0cm (5\\xa0ft 5\\xa0in to 5\\xa0ft 6\\xa0in) for males and 152 to 156\\xa0cm (5\\xa0ft 0\\xa0in to 5\\xa0ft 1\\xa0in) for females. For comparison, the average height of 20 males and 10 females Upper Palaeolithic humans is, respectively, 176.2\\xa0cm (5\\xa0ft 9.4\\xa0in) and 162.9'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[\"biology\"][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
