--- a/docs/2.run-custom-evals.md
+++ b/docs/2.run-custom-evals.md
@@ -1,3 +1,6 @@
+# 2. Run Custom Evals
+
+```python
 import query_agent_benchmarking
 
 from query_agent_benchmarking.models import (
@@ -21,3 +24,4 @@ query_agent_benchmarking.run_eval(
     docs_collection=docs_collection,
     queries=queries_collection,
 )
+```
