--- a/docs/2.run-custom-evals.md
+++ b/docs/2.run-custom-evals.md
@@ -17,7 +17,7 @@ docs_collection = DocsCollection(
 queries_collection = QueriesCollection(
     collection_name="SyntheticBrightBiology",
     query_content_key="simulated_user_query",
-    dataset_ids_key="dataset_ids",
+    gold_ids_key="dataset_ids",
 )
 
 query_agent_benchmarking.run_eval(
