--- a/docs/1.run-built-in-evals.md
+++ b/docs/1.run-built-in-evals.md
@@ -1,15 +1,15 @@
 # 1. Run Evals
 
 ```python
-import query_agent_benchmarker
+import query_agent_benchmarking
 
 # reads parameters from default config path
 
-query_agent_benchmarker.run_eval()
+query_agent_benchmarking.run_eval()
 
 # pass in override params
 
-query_agent_benchmarker.run_eval(
+query_agent_benchmarking.run_eval(
 	dataset_name="bright/psychology",
     agent="query-agent-search-mode"
 )
