--- a/docs/2.run-custom-evals.md
+++ b/docs/2.run-custom-evals.md
@@ -1,5 +1,7 @@
 # 2. Run Custom Evals
 
+The `run_eval` method further enables passing in a custom document, `DocsCollection` and/or query collection, `QueriesCollection`.
+
 ```python
 import query_agent_benchmarking
 
@@ -9,15 +11,15 @@ from query_agent_benchmarking.models import (
 )
 
 docs_collection = DocsCollection(
-    collection_name="BrightBiology",
-    content_key="content",
-    id_key="dataset_id",
+    collection_name="BrightBiology", # name of the collection to search through
+    content_key="content", # searchable property name
+    id_key="dataset_id", # dataset id property
 )
 
 queries_collection = QueriesCollection(
-    collection_name="SyntheticBrightBiology",
-    query_content_key="simulated_user_query",
-    gold_ids_key="dataset_ids",
+    collection_name="SyntheticBrightBiology", # name of collection containing queries
+    query_content_key="simulated_user_query", # property name containing the query
+    gold_ids_key="dataset_ids", # property name containing the document ids the query should return
 )
 
 query_agent_benchmarking.run_eval(
