--- a/docs/4.add-hard-negatives.md
+++ b/docs/4.add-hard-negatives.md
@@ -32,5 +32,6 @@ query_agent_benchmarking.add_hard_negatives(
     negatives_per_query=5,
     docs_collection=docs_collection,
     queries=queries_collection,
+    query_samples=100,
 )
 ```
