--- a/docs/5.misc.md
+++ b/docs/5.misc.md
@@ -5,8 +5,5 @@
 ```python
 import query_agent_benchmarking
 
-query_agent_benchmarking.database_loader(
-    "bright/biology",
-    embeddings=["arctic-1.5"]
-)
+query_agent_benchmarking.database_loader()
 ```
