--- a/docs/1.run-built-in-evals.md
+++ b/docs/1.run-built-in-evals.md
@@ -1,5 +1,7 @@
 # 1. Run Evals
 
+# Run a Single Eval
+
 ```python
 import query_agent_benchmarking
 
@@ -12,6 +14,21 @@ query_agent_benchmarking.run_eval()
 query_agent_benchmarking.run_eval(
 	dataset_name="bright/psychology",
     agent="query-agent-search-mode"
+)
+```
+
+# Run Multiple Evals
+
+```python
+import query_agent_benchmarking
+
+query_agent_benchmarking.run_evals()
+
+# pass in override params
+
+query_agent_benchmarking.run_evals(
+    dataset_name="bright/psychology",
+    query_agents=["hybrid-search", "query-agent-search-mode"]
 )
 ```
 
