--- a/docs/1.run-built-in-evals.md
+++ b/docs/1.run-built-in-evals.md
@@ -17,6 +17,8 @@ query_agent_benchmarking.run_eval(
 )
 ```
 
+The result will be saved to a JSON file by default and optionally to a Weaviate collection by setting `save_results_to_weaviate` to True.
+
 # Run Multiple Evals
 
 ```python
@@ -31,6 +33,8 @@ query_agent_benchmarking.run_evals(
     query_agents=["hybrid-search", "query-agent-search-mode"]
 )
 ```
+
+Each result will be saved to a separate JSON file by default and optionally to a Weaviate collection by setting `save_results_to_weaviate` to True.
 
 # Pre-Built Benchmarks
 
