--- a/notebooks/eda/financebench-eda.ipynb
+++ b/notebooks/eda/financebench-eda.ipynb
@@ -132,6 +132,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "id": "10c838ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3M_2018_10K'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds[\"train\"][0][\"doc_name\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4e0de4a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Failed to download the following PDFs:\n",
+      "JOHNSON_JOHNSON_2022_10K\n",
+      "JOHNSON_JOHNSON_2022_10K\n",
+      "JOHNSON_JOHNSON_2022_10K\n",
+      "JOHNSON_JOHNSON_2022Q4_EARNINGS\n",
+      "JOHNSON_JOHNSON_2022Q4_EARNINGS\n",
+      "JOHNSON_JOHNSON_2023_8K_dated-2023-08-30\n",
+      "JOHNSON_JOHNSON_2023_8K_dated-2023-08-30\n",
+      "JOHNSON_JOHNSON_2023_8K_dated-2023-08-30\n",
+      "JOHNSON_JOHNSON_2023Q2_EARNINGS\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "def download_pdf(url, folder_path, filename):\n",
+    "    response = requests.get(url)\n",
+    "    with open(f\"{folder_path}/{filename}\", \"wb\") as f:\n",
+    "        f.write(response.content)\n",
+    "\n",
+    "folder_path = \"financebench-pdfs\"\n",
+    "\n",
+    "failed_downloads = []\n",
+    "\n",
+    "for training_sample in ds[\"train\"]:\n",
+    "    doc_name, pdf_url = training_sample[\"doc_name\"], training_sample[\"doc_link\"]\n",
+    "    try:\n",
+    "        download_pdf(pdf_url, folder_path, f\"{doc_name}.pdf\")\n",
+    "    except:\n",
+    "        failed_downloads.append(f\"{doc_name}\")\n",
+    "\n",
+    "if failed_downloads:\n",
+    "    print(\"Failed to download the following PDFs:\")\n",
+    "    for failure in failed_downloads:\n",
+    "        print(failure)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "9af2a2d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 160 pages in 25.219802856445312 seconds.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import fitz\n",
+    "from pathlib import Path\n",
+    "\n",
+    "DPI = 300\n",
+    "FORMAT = \"png\"\n",
+    "\n",
+    "doc = fitz.open(f\"financebench-pdfs/3M_2018_10K.pdf\")\n",
+    "\n",
+    "zoom = DPI / 72.0\n",
+    "mat = fitz.Matrix(zoom, zoom)\n",
+    "\n",
+    "import time\n",
+    "start = time.time()\n",
+    "for i, page in enumerate(doc, start=1):\n",
+    "    pix = page.get_pixmap(matrix=mat, alpha=False)\n",
+    "    pix.save(f\"financebench-pages/3M_2018_10K_{i}.png\")\n",
+    "\n",
+    "doc.close()\n",
+    "print(f\"Saved {i} pages in {time.time() - start} seconds.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "id": "d92ebba2",
    "metadata": {},
