--- a/notebooks/evals/qa.ipynb
+++ b/notebooks/evals/qa.ipynb
@@ -2,12 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6dbb3396",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# set environment variabels"
+    "# set environment variabels\n",
+    "import os\n",
+    "\n",
+    "os.environ[\"WEAVIATE_URL\"] = \"\"\n",
+    "os.environ[\"WEAVIATE_API_KEY\"] = \"\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"\""
    ]
   },
   {
