--- a/notebooks/evals/qa.ipynb
+++ b/notebooks/evals/qa.ipynb
@@ -17,12 +17,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "92275cab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import stuff"
+    "# import stuff\n",
+    "import dspy\n",
+    "import weaviate\n",
+    "\n",
+    "from datasets import load_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06a45dd1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dspy setup\n",
+    "lm = dspy.LM(\n",
+    "    \"openai/gpt-4.1\",\n",
+    "    cache=False,\n",
+    "    api_key=os.environ[\"OPENAI_API_KEY\"]\n",
+    ")\n",
+    "\n",
+    "dspy.configure(lm=lm, track_usage=True)\n",
+    "\n",
+    "lm(\"say hello\")"
    ]
   },
   {
