--- a/notebooks/data-creation/irpapers-text.ipynb
+++ b/notebooks/data-creation/irpapers-text.ipynb
@@ -10,14 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "7b5f10f2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv(\"IRPapers.csv\")"
+    "df = pd.read_csv(\"irpapers-docs.csv\")"
    ]
   },
   {
