--- a/notebooks/data-creation/irpapers-text.ipynb
+++ b/notebooks/data-creation/irpapers-text.ipynb
@@ -690,6 +690,18 @@
     "print(merged_df.transcription_input_tokens.mean())\n",
     "print(merged_df.transcription_output_tokens.mean())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6f96f7c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "ds = load_dataset(\"weaviate/irpapers-docs\")[\"train\"]"
+   ]
   }
  ],
  "metadata": {
