--- a/notebooks/evals/qa.ipynb
+++ b/notebooks/evals/qa.ipynb
@@ -6,18 +6,11 @@
    "id": "6dbb3396",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# set environment variabels\n",
-    "import os\n",
-    "\n",
-    "os.environ[\"WEAVIATE_URL\"] = \"\"\n",
-    "os.environ[\"WEAVIATE_API_KEY\"] = \"\"\n",
-    "os.environ[\"OPENAI_API_KEY\"] = \"\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "92275cab",
    "metadata": {},
    "outputs": [],
@@ -69,6 +62,67 @@
     "dspy.configure(lm=lm, track_usage=True)\n",
     "\n",
     "lm(\"say hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "8b2f5335",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Library/Frameworks/Python.framework/Versions/3.10/lib/python3.10/site-packages/weaviate/warnings.py:302: ResourceWarning: Con004: The connection to Weaviate was not closed properly. This can lead to memory leaks.\n",
+      "            Please make sure to close the connection using `client.close()`.\n",
+      "  warnings.warn(\n",
+      "/var/folders/41/8dp_379x15d8zz4ppsjthdw40000gn/T/ipykernel_96876/3365750985.py:27: ResourceWarning: unclosed <ssl.SSLSocket fd=318, family=AddressFamily.AF_INET, type=SocketKind.SOCK_STREAM, proto=0, laddr=('10.0.0.233', 60566), raddr=('35.201.124.182', 443)>\n",
+      "  collection = weaviate_client.collections.get(\"IRPapersText_Default\")\n",
+      "ResourceWarning: Enable tracemalloc to get the object allocation traceback\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Query Rewriting for Retrieval-Augmented Large Language Models\\n\\nXinbei Ma¹,², *, Yeyun Gong³, #, †, Pengcheng He⁴, #, Hai Zhao¹,², †, Nan Duan³\\n¹Department of Computer Science and Engineering, Shanghai Jiao Tong University  \\n²Key Laboratory of Shanghai Education Commission for Intelligent Interaction and Cognitive Engineering, Shanghai Jiao Tong University  \\n³Microsoft Research Asia  \\n⁴Microsoft Azure AI  \\nsjtu_maxb@sjtu.edu.cn, zhaohai@cs.sjtu.edu.cn,  \\n{yegong, nanduan}@microsoft.com, Herbert.he@gmail.com\\n\\n*Work done during an internship at ³Microsoft Research Asia. # Equal contribution. † Corresponding author.  \\nThis paper was partially supported by Joint Research Project of Yangtze River Delta Science and Technology Innovation Community (No. 2022CSCGI1400).  \\n¹https://github.com/xmbx/RAG-query-rewriting\\n\\nAbstract\\n\\nLarge Language Models (LLMs) play powerful, black-box readers in the retrieve-then-read pipeline, making remarkable progress in knowledge-intensive tasks. This work introduces a new framework, Rewrite-Retrieve-Read instead of the previous retrieve-then-read for the retrieval-augmented LLMs from the perspective of the query rewriting. Unlike prior studies focusing on adapting either the retriever or the reader, our approach pays attention to the adaptation of the search query itself, for there is inevitably a gap between the input text and the needed knowledge in retrieval. We first prompt an LLM to generate the query, then use a web search engine to retrieve contents. Furthermore, to better align the query to the frozen modules, we propose a trainable scheme for our pipeline. A small language model is adopted as a trainable rewriter to cater to the black-box LLM reader. The rewriter is trained using the feedback of the LLM reader by reinforcement learning. Evaluation is conducted on downstream tasks, open-domain QA and multiple-choice QA. Experiments results show consistent performance improvement, indicating that our framework is proven effective and scalable, and brings a new framework for retrieval-augmented LLM.\\n\\n---\\n\\n1 Introduction\\n\\nLarge Language Models (LLMs) have shown remarkable abilities for human language processing and extraordinary scalability and adaptability in few- or zero-shot settings. (Ouyang et al., 2022; Brown et al., 2020; Chowdhery et al., 2022). However, the training process depends on large-scale high-quality corpora but without the perception of the real world. Thus, LLMs still have to face the issue of hallucination (Yao et al., 2023; Bang et al., 2023) and temporal misalignment (Rötger and Pierrehumbert, 2021; Luu et al., 2022; Jang et al., 2022). This affects the reliability of LLMs and hinders wider practical application, because the consistency between the LLM responses with the real world needs further validation. Existing work has proved that incorporating external knowledge (i.e., non-parametric knowledge) with internal knowledge (i.e., parametric knowledge) can effectively alleviate hallucination, especially for knowledge-intensive tasks. In fact, retrieval-augmented LLMs have been shown so effective that they have been regarded as a standard solution to alleviate the factuality drawbacks in naive LLM generations. Retrieval augmentation is applied to select relative passages as external contexts for the language model, which is retrieve-then-read framework (Lewis et al., 2020b; Karpukhin et al., 2020; Izacard et al., 2022). Take the open-domain Question-Answering task (open-domain QA) as an example, a retriever first searches for related documents for a question. Then the LLM receives the question and the documents, then predicts an answer.\\n\\nAs most LLMs are only accessible through inference APIs, they play the part of black-box frozen readers in the pipeline. This makes previous retrieval augmentation methods that require complete access (Lewis et al., 2020b; Guu et al., 2020; Izacard et al., 2022) no longer feasible. Recent studies on retrieval-augmented language models lean more on the LLM-oriented adaptation. An idea is to train a dense retrieval model to cater to the frozen language model (Shi et al., 2023). By using feedback from the LLM as a training objective, the retrieval model is tuned for better LLM input contexts. Another research line focuses on the design of interactions between the retriever and the reader (Yao et al., 2023; Khattab et al., 2022), where both the'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# oracle context test\n",
+    "from typing import Any, Literal\n",
+    "from weaviate.classes.query import Filter\n",
+    "\n",
+    "def fetch_object(\n",
+    "    collection: Any, \n",
+    "    pdf_id: str, \n",
+    "    return_image_or_text: Literal[\"image\", \"text\"]\n",
+    ") -> str | dspy.Image:\n",
+    "    if return_image_or_text == \"image\":\n",
+    "        response = collection.query.fetch_objects(\n",
+    "            filters=Filter.by_property(\"dataset_id\").like(pdf_id),\n",
+    "            return_properties=[\"base64_str\"]\n",
+    "        )\n",
+    "        return response.objects[0].properties[\"base64_str\"]\n",
+    "    elif return_image_or_text == \"text\":\n",
+    "        response = collection.query.fetch_objects(\n",
+    "            filters=Filter.by_property(\"dataset_id\").like(pdf_id),\n",
+    "            return_properties=[\"content\"]\n",
+    "        )\n",
+    "        return response.objects[0].properties[\"content\"]\n",
+    "weaviate_client = weaviate.connect_to_weaviate_cloud(\n",
+    "    cluster_url=os.environ[\"WEAVIATE_URL\"],\n",
+    "    auth_credentials=weaviate.auth.AuthApiKey(os.environ[\"WEAVIATE_API_KEY\"])\n",
+    ")\n",
+    "\n",
+    "collection = weaviate_client.collections.get(\"IRPapersText_Default\")\n",
+    "\n",
+    "fetch_object(collection, \"8_1\", \"text\")"
    ]
   },
   {
@@ -126,7 +180,14 @@
     "\n",
     "    question: str = dspy.InputField(description=\"The question to answer.\")\n",
     "    context: list[str] | list[dspy.Image] = dspy.InputField(description=\"The context to use to answer the question.\")\n",
-    "    answer: str = dspy.OutputField(description=\"The answer to the question.\")"
+    "    answer: str = dspy.OutputField(description=\"The answer to the question.\")\n",
+    "\n",
+    "class RAGSystem(dspy.Module):\n",
+    "    def __init__(self):\n",
+    "        self.generate_answer = dspy.Predict(GenerateAnswer)\n",
+    "\n",
+    "    def __call__(self, question: str, context: list[str] | list[dspy.Image]) -> str:\n",
+    "        pass\n"
    ]
   },
   {
